# mbvm

./: .gitignore  CMakeLists.txt  LICENSE  PROGRAMS  README.md  blackbox_test.py  build  mbvm  test_programs.py
doc/: vm.md
mbasm/mbasm/: main.c  mbasm.1
mbasm/mbasm.xcodeproj/: project.pbxproj
mbvm/: README.md  instructions.c  instructions.h  main.c  mbvm.1  system.c  system.h  vm.c  vm.h
mbvm.xcodeproj/: project.pbxproj
mbvm.xcodeproj/xcuserdata/matt.xcuserdatad/xcschemes/: mbvm.xcscheme  xcschememanagement.plist
src/: instructions.c  instructions.h  main.c  mbvm.c  system.c  system.h  vm.c  vm.h
src/instructions/: instruction_exec.c  instruction_exec.h  instruction_utils.c  instruction_utils.h  instructions.c  instructions.h
src/io/: load.c  load.h
src/system/: system.c  system.h
src/test/: test_util.c  test_util.h
src/util/: util.c  util.h
src/vm/: vm.c  vm.h
test_programs/: add_addr  hello_world  loop  repeat_me  test_programs.json
tests/: README.md  test_registry.c  test_utils.c  test_utils.h
tests/instructions/: test_instructions.c  test_instructions.h
tests/system/: test_system.c  test_system.h
tests/vm/: test_vm.c  test_vm.h
